Fixes bug 80020 "Accept-Language and Accept-Charset format error" patch=havill@redhat.com, r=bbaetz, sr=darin, a=asa